--- a/Chatting/src/main/resources/test.fxml
+++ b/Chatting/src/main/resources/test.fxml
@@ -3,14 +3,21 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Client.login.testController">
    <children>
-      <Button onAction="#handleLoginButton" layoutX="365.0" layoutY="261.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="115.0" text="Login" />
-      <Button onAction="#handleRegisterButton" layoutX="147.0" layoutY="261.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="115.0" text="Register" />
+      <ImageView fitHeight="366.0" fitWidth="623.0" layoutY="-34.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@头号玩家.gif" />
+         </image>
+      </ImageView>
+      <Button layoutX="365.0" layoutY="261.0" mnemonicParsing="false" onAction="#handleLoginButton" prefHeight="43.0" prefWidth="115.0" text="Login" />
+      <Button layoutX="147.0" layoutY="261.0" mnemonicParsing="false" onAction="#handleRegisterButton" prefHeight="43.0" prefWidth="115.0" text="Register" />
       <TextField fx:id="usernameField" layoutX="149.0" layoutY="72.0" opacity="0.36" prefHeight="43.0" prefWidth="331.0">
          <font>
             <Font size="18.0" />
